fix text align issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 
 /* headings */
